--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arun Blog </title>
+    <title>Kaushal Blog </title>
     <link rel="stylesheet" href="style.css">
     <!--font link-->
 
@@ -175,7 +175,7 @@
      </section>
      <!--footer-->
      <div class="footer container">
-        <p>&#169;Arun All Right Reserved</p>
+        <p>&#169;Kaushal All Right Reserved</p>
         <div class="social">
             <a href="#"><i class='bx bxl-facebook' ></i></a>
         </div>
