--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <!--nav-->
          <div class="nav container">
              <!--logo-->
-             <a href="#" class="logo"> Ar<span>un</span></a>
+             <a href="#" class="logo"> Ka<span>un</span></a>
              <!--login btn-->
              <a href="#" class="login">Login</a>
             </div>
@@ -23,7 +23,7 @@
 
     <Section class="home" id="home">
         <div class="home-text container">
-            <h2 class="home-title">The Arun Blog</h2>
+            <h2 class="home-title">The Kaushal Blog</h2>
             <span class="home-subtitle">your source of great content</span>
 
         </div>
