--- a/post-page.html
+++ b/post-page.html
@@ -50,7 +50,7 @@
      </div>
      <!--footer-->
      <div class="footer container">
-        <p>&#169;Arun All Right Reserved</p>
+        <p>&#169;Kaushal All Right Reserved</p>
         <div class="social">
             <a href="#"><i class='bx bxl-facebook' ></i></a>
         </div>
