--- a/post-page.html
+++ b/post-page.html
@@ -15,7 +15,7 @@
          <!--nav-->
          <div class="nav container">
              <!--logo-->
-             <a href="index.html" class="logo"> Ar<span>un</span></a>
+             <a href="index.html" class="logo"> Ka<span>un</span></a>
              <!--login btn-->
              <a href="#" class="login">Login</a>
             </div>
