--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <!--nav-->
          <div class="nav container">
              <!--logo-->
-             <a href="#" class="logo"> Ka<span>un</span></a>
+             <a href="#" class="logo"> Ka<span>us</span></a>
              <!--login btn-->
              <a href="#" class="login">Login</a>
             </div>
